# CellModeller-ingallslab

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DoxygenConfig  README.md  TODO.md  pyproject.toml  setup.py
CellModeller/: CellState.py  Simulator.py  VTPWriter.py
CellModeller/Biophysics/BacterialModels/: AdhKernel.cl  CLBacterium.cl  CLBacterium.py  CLBacteriumAdhesion.py  CLBacteriumAdhesion_reg_param.py  CLBacterium_reg_param.py
CellModeller/GUI/: PyGLCMViewer.py  PyGLGUI.ui
CellModeller/Modules/: CMModule.py  ModuleProtocols.py
CellModeller/Regulation/: ModuleRegulator.py
CellModeller/Signalling/: GridDiffusion.py
Community/: contributing.md
Examples/AaronYip/: ConjugationCrossFeeding.py  process_pickle.py  step-00500.pickle
Examples/KyleP/: Tutorial_1a.py  filamenting_notes.txt  filamenting_wip.py
Installers/: AYInstallCellModellerLinux64_public.sh
Models/biophysics_calibration/: plot_abc.py  pyabc_cellmodeller.py  results.db  simulation_module.py
Models/biophysics_sensitivity/: 4_params_sim.py  adhesion_reg_param_sim.py  process_summary_stats.py
Models/conjugation-eye-candy/: Conjugation-eye-candy.py
Models/eye-candy/: eye-candy.py
Scripts/: CellModellerGUI.py  ConvertPicklesToVTPs.py  Draw2DPDF.py  batch_dt.py  video.sh
Scripts/summaryStatistics/: cellTypeVolFracs.py  countPopulations.py  helperFunctions.py  hgt.py  hgt_intermixing.py  intermixing.py
output-processing/: CellModellerProcessing.py  README.md  neighborsFinding.py
output-processing/unit test/: FeatureExtractionCellmodeller.ipynb  unit_test.py
(+603 files in other folders)
